--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <img src="C:/Users/acer/OneDrive/Pictures/foto_keramat/www.jpg" class="nav-photo rounded-circle" alt="Daniel's Photo">
+        <img src="assets/www.jpg" class="nav-photo rounded-circle" alt="Daniel's Photo">
          <a class="navbar-brand" href="#">Daniel Ndara Palako</a>
         <button
           class="navbar-toggler"
@@ -107,7 +107,7 @@
       <section id="home" class="section active py-5 bg-light text-center">
         <div class="container">
           <img
-            src="C:/Users/acer/OneDrive/Pictures/foto_keramat/www.jpg"
+            src="assets/www.jpg"
             class="rounded-circle mb-3 small-photo"
             alt="Daniel's Photo"
           />
@@ -138,9 +138,9 @@
         <div class="container">
           <h2>Organizational Experience</h2>
           <div class="gallery">
-            <img src="C:/Users/acer/OneDrive/Pictures/foto_keramat/1.jpg" alt="Deskripsi Gambar 1">
-            <img src="C:/Users/acer/OneDrive/Pictures/foto_keramat/2.jpg"alt="Deskripsi Gambar 2">
-            <img src="C:/Users/acer/OneDrive/Pictures/foto_keramat/3.jpg" alt="Deskripsi Gambar 3">
+            <img src="assets/1.jpg" alt="Deskripsi Gambar 1">
+            <img src="assets/2.jpg"alt="Deskripsi Gambar 2">
+            <img src="assets/3.jpg" alt="Deskripsi Gambar 3">
         </div>
               <h4>2023 - 2025</h4>
               <p>
